# Machine_Learning-based_Quantitative_Trading_Strategies

./: .gitignore  LICENSE  Makefile  README.md  config.yaml  docker-compose.yml  dockerfile  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci_check.yml
src/: __init__.py  config_universe.yaml  data_split_labeling.yaml
src/core/: __init__.py  data_splitter.py  generate_ticker_yaml.py  rolling_horizon_splitter.py  triple_barrier_labeler.py
src/core/backtesting/: __init__.py  cpcv_splitter.py
src/core/labeling/: __init__.py  triple_barrier_labeler.py
src/core/utils/: __init__.py  io.py  metrics.py
src/get_data/: __init__.py  fetcher.py  visualizer.py
src/models/: __init__.py  base.py
src/models/neural_net/: __init__.py  config.yaml  simple_nn.py
tests/: test_cpcv.py  test_metrics.py  test_simple_nn.py
