# ===============================
# Machine_Learning-based_Quantitative_Trading_Strategies
# 機械学習を用いたクオンツ戦略：研究／実装用プロジェクト設定（uv対応）
# ※ 依存関係は uv で解決し、`uv sync` → `uv run <script>` を基本運用とする
# ===============================

[project]
# プロジェクトの基本情報
name = "ml-quant-strategies"
version = "0.1.0"
description = "機械学習を用いたクオンツ（数量的）投資戦略の研究・実装"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<3.12"

# 研究・実装のコア依存関係
# - データ処理／I/O：pandas, numpy, pyarrow, pyyaml
# - 可視化：matplotlib, plotly
# - 機械学習：scikit-learn, torch（CPU版を標準。GPUは各自環境で別途インストール推奨）
# - 市場データ取得：yfinance
# - ノートブック：jupyter
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "pyarrow>=15",
  "pyyaml>=6.0.2",
  "matplotlib>=3.8",
  "plotly>=5.20",
  "scikit-learn>=1.4",
  "torch>=2.2; platform_system != 'Windows'",        # Linux/MacのCPU版（GPU/CUDAは各自で）
  "torch==2.2.2; platform_system == 'Windows'",      # Windowsの例（必要に応じて調整）
  "yfinance>=0.2.50",
  "jupyter>=1.0",
  # バックテスト系（任意）：backtesting.py はPandasベース
  "backtesting>=0.3.3",
]

# プロジェクトURL（任意）：レポジトリやドキュメント等に置き換え
[project.urls]
homepage = "https://github.com/<your-org-or-name>/<your-repo>"
repository = "https://github.com/<your-org-or-name>/<your-repo>"

# -------- オプションのエクストラ依存関係 --------
[project.optional-dependencies]
# (A) 可視化・報告周りを強化したい場合
viz = [
  "seaborn>=0.13",
]
# (B) 強化学習（将来予定）
rl = [
  "stable-baselines3>=2.3",
]
# (C) 開発用ツール (Linter, Formatterなど)
# `make sync` (uv sync --all-extras) で自動的にインストールされます
dev = [
  "ruff>=0.5.0", # Linter & Formatter
]


# -------- Lint/Format 等（ruff）--------
[tool.ruff]
# コードスタイル：プロジェクト事情に合わせて調整
line-length = 100
target-version = "py311"

# Ruff v0.5.x+ の推奨設定 (lint セクションに移動)
[tool.ruff.lint]
extend-select = ["I"]   # import順序の自動整形など

# -------- PyTest (導入する場合) --------
[tool.pytest.ini_options]
# PyTestの基本設定（必要に応じて編集）
addopts = "-q"
testpaths = ["tests"]